# visvalingamwyatt

./: .gitignore  .travis.yml  LICENSE.txt  Makefile  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: publish.yml  test.yml
src/visvalingamwyatt/: __init__.py  __main__.py  visvalingamwyatt.py
tests/: __init__.py  test_vw.py
tests/data/: sample.json
visvalingamwyatt/: __init__.py  __main__.py  simplify.py  visvalingamwyatt.py
visvalingamwyatt/cli/: __init__.py  simplify_fiona.py  simplify_json.py
