[metadata]
name = visvalingamwyatt
version = attr: visvalingamwyatt.__version__
description = Simplify geometries with the Visvalingam-Wyatt algorithm
long_description = file: README.md
long_description_content_type = text/markdown
author = fitnr
author_email = contact@fakeisthenewreal.org
url = https://github.com/fitnr/visvalingamwyatt
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: PyPy
    Operating System :: OS Independent

[options]
zip_safe = True
packages = find:
package_dir =
    =src
install_requires =
    numpy>=1.8

[options.extras_require]
tests =
	coverage

[options.entry_points]
console_scripts =
    vwsimplify=visvalingamwyatt.__main__:main

[options.packages.find]
where = src
